footer jumping fix

--- a/css/style.css
+++ b/css/style.css
@@ -820,7 +820,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #holyMass {
   /* padding: 40px 0; */
-  min-height: calc(100vh - 146px); /*dijo - full height schedule*/
+  min-height: calc(100vh - 70px); /*dijo - full height schedule*/
 }
 
 #schedule .nav-tabs {
